2003-06-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: made it not to remove the root parameter from 
	the append data

2003-06-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in, boot.pl.in: fix path problems when the kernel
	image is in a mount point different to /

2003-06-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* backends/boot-grub.pl.in, boot.pl.in: made grub path-aware when 
	/boot is a partition. fixes #113687 and #106997

2003-05-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: added a comma, now the time tool backend works again
	:-(

2003-05-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.26.1

2003-05-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in, runlevel-conf.in, service.pl.in, time-conf.in,
	users-conf.in: added mandrake 9.1 support, patch by Frej Rasmussen

2003-05-29  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* runlevel-conf.in, service.pl.in, users-conf.in, time-conf.in,
	network-conf.in, network.pl.in, platform.pl.in: added RedHat 9
	support

2003-05-29  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* runlevel-conf.in, service.pl.in: added support for file-rc (ATM in
	debian), tidied up things to allow several init types, but still much
	more work is to come about this...
	* service-list.pl.in: added some more forbidden services

2003-05-24  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in: I am really dumb... I still don't know how, but 
	somehow I deleted the $profile_file declaration line, leaving the
	profiles administration completely useless :-(((

2003-05-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.26.0
	 
2003-05-19  Ken Stanley  <kstanley@teamzx.com>

	* platform.pl.in, time-conf.in, users-conf.in: slackware 9 version is
	9.0.0, not 9.0. Fixed

2003-05-18  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in: added support for network profiles
